k8s/manifests-4a3279/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-4a3279
  namespace: journee
  labels:
    app: journee-4a3279
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-4a3279
  template:
    metadata:
      labels:
        app: journee-4a3279
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-4a3279
          image: gcr.io/my-docker-471807/journee:4a3279-8c5914
          ports:
            - containerPort: 3000
