k8s/manifests-4a3279/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-4a3279
  namespace: journee
spec:
  selector:
    app: journee-4a3279
  ports:
    - port: 80
      targetPort: 3000
